Potentially fixing logo on mobile.

--- a/src/styles/mazel.scss
+++ b/src/styles/mazel.scss
@@ -1774,7 +1774,7 @@ form label.error {
       .header .logo a {
           margin-top: 15px;
           margin-bottom: 15px;
-          width: 160px;
+          width: 180px;
           transition: all 0.3s ease 0s;
           -o-transition: all 0.3s ease 0s;
           -moz-transition: all 0.3s ease 0s;
